--- a/FreshCheck/app/src/main/res/layout/activity_forgot_password.xml
+++ b/FreshCheck/app/src/main/res/layout/activity_forgot_password.xml
@@ -19,60 +19,26 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:backgroundTint="@color/black"
-            android:text="Login"
+            android:text="Reset Password"
             android:textAlignment="center"
             android:textColor="@color/purple_500"
             android:textSize="24sp"
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/ed_email_login"
+            android:id="@+id/ed_email_reset"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"
             android:inputType="textEmailAddress" />
 
-        <EditText
-            android:id="@+id/ed_password_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Password"
-            android:inputType="textPassword" />
-
-        <TextView
-            android:id="@+id/forgot_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:backgroundTint="@color/black"
-            android:text="Forgot Password?"
-            android:textAlignment="textEnd" />
-
         <Button
-            android:id="@+id/btn_login"
+            android:id="@+id/btn_reset"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:backgroundTint="@color/purple_500"
-            android:text="Login" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:backgroundTint="@color/black"
-            android:text="New User?"
-            android:textAlignment="center" />
-
-        <TextView
-            android:id="@+id/tv_to_register"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/black"
-            android:text="Register Here"
-            android:textAlignment="center"
-            android:textColor="@color/purple_500"
-            android:textStyle="bold" />
+            android:text="Reset" />
 
     </LinearLayout>
 
