--- a/FreshCheck/app/src/main/res/layout/activity_main.xml
+++ b/FreshCheck/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:text="@string/welcome"
+        android:text="Welcome"
         android:textColor="@color/black"
         android:textSize="50sp"
         android:textStyle="bold"
@@ -19,25 +19,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btn_login_main"
-        android:layout_width="100dp"
-        android:layout_height="75dp"
-        android:layout_marginTop="64dp"
-        android:text="@string/login"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-    <Button
-        android:id="@+id/btn_register_main"
-        android:layout_width="150dp"
-        android:layout_height="75dp"
-        android:layout_marginTop="32dp"
-        android:textSize="20sp"
-        android:text="@string/register"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login_main" />
 </androidx.constraintlayout.widget.ConstraintLayout>
